--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="#" class="navigation__link">Pricing</a>
                 <a href="#" class="navigation__link">Blog</a>
             </nav>
-            <a href="tel:+00 123 456 789" class="header__tel">+00 123 456 789</a>
+            <a href="tel:+00123456789" class="header__tel">+00 123 456 789</a>
             <button class="contactus__button">Contact Us</button>
         </div>
     </header>
@@ -62,9 +62,14 @@
                 <img src="img/google.png" alt="google" class="partner">
                 <img src="img/disney.png" alt="disney" class="partner">
             </div>
+            <div class="team__ability">
+                <h2 class="clients__title">Whatever work you do, 
+                we're able to help</h2>
+                <img class="image__position__team" src="img/team.png" alt="team">
+            </div>
         </div>
         <!-- /.container container_clients -->
     </section>
-    <!-- /.clients -->
+    <!-- /.section__clients -->
 </body>
 </html>
