--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     <section class="section__promo">
         <div class="container container__promo">
             <div class="promo__text">
-               <h1 class="promo__title">Good design meets
-                great user experience</h1>
+               <h1 class="promo__title">Good design meets great user experience</h1>
                 <p class="promo__desc">For everyone, from beginners to experts</p> 
             </div>
             <div class="promo__buttons">
@@ -51,7 +50,7 @@
     </section>
     <!-- /.section__promo -->
     <section class="section__clients">
-        <div class="container container_clients">
+        <div class="container container__clients">
             <span class="wearetrusted">Trusted by forward-thinking software teams around the world</span>
             <div class="icon__partners">
                 <img src="img/netflix.png" alt="netflix" class="partner">
@@ -62,14 +61,82 @@
                 <img src="img/google.png" alt="google" class="partner">
                 <img src="img/disney.png" alt="disney" class="partner">
             </div>
+            <h2 class="clients__title">Whatever work you do, we're able to help</h2>
             <div class="team__ability">
-                <h2 class="clients__title">Whatever work you do, 
-                we're able to help</h2>
                 <img class="image__position__team" src="img/team.png" alt="team">
+                <div class="ability__column">
+                    <div class="ability__line first__line">
+                        <h3 class="ability__name">Design and Assets</h3>
+                        <p class="ability__content">Make your brand stand out with pixel-perfect design crafted to perfection.</p>
+                    </div>
+                    <div class="ability__line second__line">
+                        <h3 class="ability__name">Easy Content</h3>
+                        <p class="ability__content">Import your demos or build pages visually. Bonus: All images and illustrations included!</p>
+                    </div>
+                    <div class="ability__line third__line">
+                        <h3 class="ability__name">Fast and Reliable</h3>
+                        <p class="ability__content">No heavy-weight plugins. No builders. No unneccesary file loading. Pure WordPress.</p>
+                    </div>
+                </div>
+                <!-- /.wecancolumn -->
             </div>
         </div>
         <!-- /.container container_clients -->
     </section>
     <!-- /.section__clients -->
+    <section class="section__drafts">
+        <div class="container container__drafts">
+            <div class="drafts__elements">
+               <h2 class="drafts__title">Simplicity meets innovative design</h2>
+                <p class="drafts__content">It's really easy to start using Digits. <br> Install the theme, choose a demo and start designing the future of your business!</p>
+                <button class="buy-digits__button">Buy Digits</button>
+            </div>
+            <!-- /.drafts__elements -->
+            
+        </div>
+        <!-- /.container container__drafts -->
+    </section>
+    <!-- /.section__drafts -->
+    <section class="section__reviews">
+        <div class="container container__reviews">
+            <h2 class="reviews__title">What others are saying</h2>
+            <div class="reviews__box">
+                <div class="review__box">
+                    <p class="review__content">Completely beautiful website and amazing support! This is my second website from this author and I love both of the sites so much and she has helped me so well when I needed it!</p>
+                    <img class="profilephoto" src="./img/firstwoman.png" alt="profilephoto">
+                    <a href="#" class="profilenamelink"><h3 class="profilename">Happy User</h3></a>
+                    <a href="#" class="review__sitelink">tempy.club</a>
+                </div>
+                <!-- /.review__box -->  
+                <div class="review__box">
+                    <p class="review__content">Really easy to use and customize. easy to understand. Darinka helped me with my site! She answers very quickly, a good service! Thank you very much!</p>
+                    <img class="profilephoto" src="./img/firstman.png" alt="profilephoto">
+                    <a href="#" class="profilenamelink"><h3 class="profilename">Happy User</h3></a>
+                    <a href="#" class="review__sitelink">tempy.club</a>
+                </div>
+                <!-- /.review__box -->  
+                <div class="review__box">
+                    <p class="review__content">Really pleasing to look at! Documentation (including installation instructions) are clear and that is coming from a relatively new WordPress user.</p>
+                    <img class="profilephoto" src="./img/secondwoman.png" alt="profilephoto">
+                    <a href="#" class="profilenamelink"><h3 class="profilename">Happy User</h3></a>
+                    <a href="#" class="review__sitelink">tempy.club</a>
+                </div>
+                <!-- /.review__box -->    
+            </div>
+            <!-- /.reviews__box -->
+            
+        </div>
+        <!-- /.container container__reviews -->
+    </section>
+    <!-- /.section__reviews -->
+    <section class="section__intouch">
+        <div class="container container__intouch">
+            <h2 class="intouch__title">Ready to launch your next website?</h2>
+            <div class="intouch__box">
+                <button class="intouch__button">Get in touch now</button>
+                <p class="takeapeek">Or, take a peek inside our <a href="#" class="studiolink">design studio</a></p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
